# rss_alter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml
arc/subs/: announcement.py  characterhub.py  common.py  criticism_in.py  image.py  notification.py  policy.py  recently_created.py  solicitation.py  suggestion.py
data/: NewAndCriticism.json.example  NewThreads.json.example  config.ini  config.json  data.sqlite3
src/: RSS_parse.py  Untitled.ipynb  __init__.py  age_flyer.py  criticism_in.py  db.py  get_RSS.py  listpages.py  listpages_get.py  main.py  models.py  most_recently_created.py  new_created_pages.py  new_threads.py  sqlite_util.py  webhook.py
src/arc/: convert_most.py
src/subs/: announcement.py  characterhub.py  common.py  criticism_in.py  image.py  notification.py  policy.py  recently_created.py  solicitation.py  suggestion.py
src/utils/: RSS_parse.py  common.py  listpages.py  webhook.py
